# Another_MatplotlibCpp

./: .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: FindPythonPyenv.cmake  MatplotlibCppConfig.cmake.in  build_options.cmake  cmake_uninstall.cmake.in  googletest.cmake  pybind11-download.cmake  pybind11.cmake
docs/: Doxyfile.in
examples/: Animation.cpp  Basic.cpp  BezierPath.cpp  CMakeLists.txt  Hyperplane.cpp  Modern.cpp  Path.cpp  Surface.cpp
include/matplotlib-cpp/: AnyBase.hpp  MatplotlibCpp.hpp  ModuleEmbedding.hpp  PythonInterpreter.hpp
include/matplotlib_cpp/: AnyBase.hpp  MatplotlibCpp.hpp
src/: CMakeLists.txt
src/matplotlib-cpp/: MatplotlibCpp.cpp  ModuleEmbedding.cpp  ModuleEmbedding.hpp  PythonInterpreter.cpp  PythonInterpreter.hpp
src/matplotlib_cpp/: MatplotlibCpp.cpp  ModuleEmbedding.hpp  PythonInterpreter.hpp
tests/: CMakeLists.txt  TestInitialization.cpp
